--- a/web/side-menu.css
+++ b/web/side-menu.css
@@ -259,3 +259,24 @@ Hides the menu at `48em`, but modify this based on your app's needs.
     background-color: white;
     position: fixed;
 }
+
+#menu li a .close {
+    display: none;
+    background-color: rgba(255, 0, 0, 0.7);
+    position: absolute;
+    top: 0px;
+    right: 0px;
+}
+
+#menu li a .close a:hover {
+    background-color: transparent;
+}
+
+#menu li .close a {
+    padding-right: 0.6em;
+}
+
+#menu li a:hover .close {
+    display: block;
+}
+
